--- a/templates/pages/project.html
+++ b/templates/pages/project.html
@@ -40,7 +40,7 @@
           <div class="card-block">
             <h4 id="fontduyuru" >İdeal Sporunu Keşfetme Zamanı:</h4><br><br>
             <p>Projemizin temel amacı; spor çalışanlarının aktif yaşam...</p>
-            <a href="{%url 'curlingtr' %}" style="color: aliceblue;" class="btn btn-primary btn-sm">Daha Fazla</a>
+            <a href="" style="color: aliceblue;" class="btn btn-primary btn-sm">Daha Fazla</a>
           </div>
         </div>
   
@@ -61,7 +61,7 @@
               <h4 id="fontduyuru" >Çok Hareket-Sağlıklı Vücut & Çok Bilinç-Sağlıklı Gelişim</h4><br>
               <p>Gençleri Floor Curling ile Sürdürülebilir... </p>
               
-              <a href="{%url 'sportstr' %}" style="color: aliceblue;" class="btn btn-primary btn-sm float-right">Read More</a>
+              <a href="" style="color: aliceblue;" class="btn btn-primary btn-sm float-right">Read More</a>
             </div>
           </div>
    
