--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item ">
-          <a class="nav-link" id="nav-text" style=" margin-left: 250px;" href="{%url 'project'%}">PROJELER<span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="nav-text" style=" margin-left: 250px;" href="">PROJELER<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="nav-text" style=" margin-left: 15px;" href="{%url 'call'%}">ÇAĞRILAR</a>
