--- a/templates/pages/project_page.html
+++ b/templates/pages/project_page.html
@@ -54,7 +54,7 @@
         <h3 id="fontduyuru">PROJE AÇIKLAMASI</h3>
         <br>
 
-        <p id="hakdiv" style="text-align: justify;">{{page.aciklama}}</p>
+        <p id="hakdiv" style="text-align: justify;">{{page.aciklama | safe}}</p>
         <br><br>
       
       </div>
@@ -65,11 +65,11 @@
         <div style="background-color: #193073; padding: 30px; height: 550px; margin-right: 70px;">
           <h3 style="color: white" id="fontduyuru">PROJE PARTNERLERİ</h3>
           <br>
-          <p style="color: white; font-size: 15px;" id="hakdiv">{{page.partner}}</p>
+          <p style="color: white; font-size: 15px;" id="hakdiv">{{page.partner | safe}}</p>
 
           <br><br>
           <h3 id="fontduyuru" style="color: white; "> ETKİNLİK AKIŞI</h3> <br>
-          <p  style="color: white; font-size: 15px;" id="hakdiv">{{page.akis}}</p>
+          <p  style="color: white; font-size: 15px;" id="hakdiv">{{page.akis | safe}}</p>
         
         </div>
       </div>
@@ -216,9 +216,11 @@
 
     </div>
   </div>
+  
+
   {% endfor %}
 {% endif %}
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br>
 
 
 
