--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" >
     <div class="footer">
 
 
@@ -13,11 +13,11 @@
 
         <div class="row">
             <ul>
-                <li><a href="{%url 'signin'%}">Projeler</a></li>
-                <li><a href="{%url 'call'%}">Çağrılar</a></li>
-                <li><a href="{%url 'galeri'%}">Galeri</a></li>
-                <li><a href="{%url 'duyuru' %}">Duyurular</a></li>
-                <li><a href="{%url 'about'%}">Hakkımızda</a></li>
+                <li><a href="">Projeler</a></li>
+                <li><a href="">Çağrılar</a></li>
+                <li><a href="">Galeri</a></li>
+                <li><a href="">Duyurular</a></li>
+                <li><a href="">Hakkımızda</a></li>
             </ul>
         </div>
     </div>
