--- a/templates/pages/project.html
+++ b/templates/pages/project.html
@@ -3,155 +3,33 @@
 
 {% block content %}
 
-
+{% if project_page_content %}
 <br><br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- AAAAAAAAAAAAAAAA -->
-
-<div class="container py-3">
-    <!-- <div class="title h1 text-center">Horizontal cards - Bootstrap 4</div> -->
-    <!-- Card Start -->
+  <div class="container py-3" >
     
-      
-    <!-- End of card -->
-  
+
+    {% for project in project_page_content %}
+    <div class="col-md-6">
+      <div class="card">
+        <div class="row">
+          <div class="col-sm-7">
+            <div >
+              <h4 id="fontduyuru" >{{project.title}}</h4><br>
+              <p>{{project.aciklama|slice:"1:80" | safe}} ...</p> <br>
+              <a href="{% url 'proje' project.project_url %}" style="color: aliceblue;" class="btn btn-primary btn-sm">Daha Fazla</a>
+            </div>
+          </div>
+    
+          <div class="col-sm-5">
+            <img class="d-block w-100" src="{{project.image1}}" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    {% endfor %}
   </div>
-  
-  <div class="container">
-
-
-    <div class="card float-left">
-      <div class="row">
-  
-        <div class="col-sm-7">
-          <div class="card-block">
-            <h4 id="fontduyuru" >İdeal Sporunu Keşfetme Zamanı:</h4><br><br>
-            <p>Projemizin temel amacı; spor çalışanlarının aktif yaşam...</p>
-            <a href="" style="color: aliceblue;" class="btn btn-primary btn-sm">Daha Fazla</a>
-          </div>
-        </div>
-  
-        <div class="col-sm-5">
-          <img class="d-block w-100" src="https://picsum.photos/150?image=380" alt="">
-        </div>
-      </div>
-    </div>
-  
-   
-       <div class="card float-right">
-        <div class="row">
-          <div class="col-sm-5">
-            <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
-          </div>
-          <div class="col-sm-7">
-            <div class="card-block">
-              <h4 id="fontduyuru" >Çok Hareket-Sağlıklı Vücut & Çok Bilinç-Sağlıklı Gelişim</h4><br>
-              <p>Gençleri Floor Curling ile Sürdürülebilir... </p>
-              
-              <a href="" style="color: aliceblue;" class="btn btn-primary btn-sm float-right">Read More</a>
-            </div>
-          </div>
-   
-        </div>
-      </div>
-    </div>
-   
-   <br>
-  <br>
-<!--
-  <div class="container">
-    <div class="card float-left">
-      <div class="row ">
-  
-        <div class="col-sm-7">
-          <div class="card-block">
-           
-            <p>Wetgple text to build your own card.</p>
-            <p>Change around the content for awsomenes</p>
-            <a href="#" style="color: aliceblue;" class="btn btn-primary btn-sm">Read More</a>
-          </div>
-        </div>
-  
-        <div class="col-sm-5">
-          <img class="d-block w-100" src="https://picsum.photos/150?image=380" alt="">
-        </div>
-      </div>
-    </div>
-  
-   
-      <div class="card float-right">
-        <div class="row">
-          <div class="col-sm-5">
-            <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
-          </div>
-          <div class="col-sm-7">
-            <div class="card-block">
-              
-              <p>Copy paste the HTML and CSS.</p>
-              <p>Change around the content for awsomenes</p>
-              <br>
-              <a href="#" style="color: aliceblue;" class="btn btn-primary btn-sm float-right">Read More</a>
-            </div>
-          </div>
-   
-        </div>
-      </div>
-    </div>
-   
-    <br><br>
-
-    <div class="container">
-        <div class="card float-left">
-          <div class="row ">
-      
-            <div class="col-sm-7">
-              <div class="card-block">
-              
-                <p>Wetgple text to build your own card.</p>
-                <p>Change around the content for awsomenes</p>
-                <a href="#" style="color: aliceblue;" class="btn btn-primary btn-sm">Read More</a>
-              </div>
-            </div>
-      
-            <div class="col-sm-5">
-              <img class="d-block w-100" src="https://picsum.photos/150?image=380" alt="">
-            </div>
-          </div>
-        </div>
-      
-       
-          <div class="card float-right">
-            <div class="row">
-              <div class="col-sm-5">
-                <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
-              </div>
-              <div class="col-sm-7">
-                <div class="card-block">
-                  
-                  <p>Copy paste the HTML and CSS.</p>
-                  <p>Change around the content for awsomenes</p>
-                  <br>
-                  <a href="#" style="color: aliceblue;" class="btn btn-primary btn-sm float-right">Read More</a>
-                </div>
-              </div>
-       
-            </div>
-          </div>-->
-        </div> 
-
-        <br> <br> <br><br> <br> <br><br> <br> <br> <br> <br> <br><br> <br> <br>
+{% endif %} 
 {% endblock %}
 
