--- a/templates/pages/project_page.html
+++ b/templates/pages/project_page.html
@@ -12,7 +12,7 @@
   <div class="container mt-3">
     <div class="row">
       <!-- Sol taraftaki içerik -->
-      <div class="col-md-6">
+      <div class="col-sm-12 col-md-6">
         
         <h3 id="projetitle">{{page.title}} <br><br></h3>
 
@@ -60,9 +60,9 @@
       </div>
 
       
-      <div  class="col-md-5 ml-auto">
+      <div  class="col-sm-12 col-md-5 ml-auto ">
         
-        <div style="background-color: #193073; padding: 30px; height: 550px; margin-right: 70px;">
+        <div style="background-color: #193073; padding: 30px; margin-right: 70px;">
           <h3 style="color: white" id="fontduyuru">PROJE PARTNERLERİ</h3>
           <br>
           <p style="color: white; font-size: 15px;" id="hakdiv">{{page.partner | safe}}</p>
@@ -86,133 +86,134 @@
   <!-- FOTOĞRAFLAR -->
   <div class="container">
     <div class="row">
-
+      {% if page.image1 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image1}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image1text}}</a></h6>
+            <h6>{{page.image1text}}</h6>
           </div>
 
         </div>
       </div>
-
+      {%endif%}
       
+      {% if page.image2 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image2}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image2text}}</a></h6>
+            <h6>{{page.image2text}}</h6>
           </div>
           
         </div>
       </div>
+      {%endif%}
 
-
-
+      {% if page.image3 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image3}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image3text}}</a></h6>
+            <h6>{{page.image3text}}</h6>
           </div>
           
         </div>
       </div>
+      {%endif%}
 
-
-
+      {% if page.image4 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image4}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image4text}}</a></h6>
+            <h6>{{page.image4text}}</h6>
           </div>
           
         </div>
       </div>
-
+      {%endif%}
       
-
+      {% if page.image5 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image5}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image5text}}</a></h6>
+            <h6>{{page.image5text}}</h6>
           </div>
           
         </div>
       </div>
+      {%endif%}
 
 
-
-
+      {% if page.image6 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image6}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image6text}}</a></h6>
+            <h6>{{page.image6text}}</h6>
           </div>
           
         </div>
       </div>
+      {%endif%}
 
 
-
-
+      {% if page.image7 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image7}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image7text}}</a></h6>
+            <h6>{{page.image7text}}</h6>
           </div>
           
         </div>
       </div>
-      
+      {%endif%}
 
-
+      {% if page.image8 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image8}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image8text}}</a></h6>
+            <h6>{{page.image8text}}</h6>
           </div>
           
         </div>
       </div>
+      {%endif%}
 
 
-
-
+      {% if page.image9 %}
       <div class="col-md-6 col-lg-4">
         <div class="card border-0 transform-on-hover">
 
           <img src="{{page.image9}}" alt="Card Image" class="card-img-top">
 
           <div class="card-body">
-            <h6><a href="#">{{page.image9text}}</a></h6>
+            <h6>{{page.image9text}}</h6>
           </div>
           
         </div>
       </div>
-
+      {%endif%}
 
     </div>
   </div>
